--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -14,16 +14,37 @@
 
 /* //////////animations///////////////// */
 @keyframes layOut {
-  from {
+  0% {
     transform: translateX(-100%);
   }
-  to {
+  20% {
+    transform: translateX(20%);
+  }
+  40% {
+    transform: translateX(40%);
+  }
+  60% {
+    transform: translateX(60%);
+  }
+  80% {
+    transform: translateX(80%);
+  }
+  100% {
     transform: translateX(100%);
   }
 }
+.animate-duration-5000 {
+  animation-duration: 2s;
+  animation-timing-function: ease;
+}
 /* ////////////////////layers///////////////////// */
-@layer utilities {
-  .animate-duration-5000 {
-    animation-duration: 2s;
-  }
+.responsive {
+  transform: translateX(0);
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
