some resizing things

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -28,7 +28,11 @@
   animation-timing-function: ease;
 }
 /* ////////////////////utilities///////////////////// */
-
+@layer utilities {
+  .overflow-hidden {
+    overflow: hidden;
+  }
+}
 /* //////////////componenets////////////////////////////// */
 @layer components {
   .shadow-nav {
