--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,1 +1,23 @@
-@tailwind utilities;
+@media (min-width: 1280px) and (max-height: 900px) {
+  .hero {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    max-height: 90vh;
+  }
+  .hero-txt p {
+    font-size: 60px;
+    line-height: 105px;
+  }
+  .hero-txt img {
+    width: 70px;
+  }
+  .hero-right {
+    max-height: 600px;
+  }
+  .hero-right img {
+    height: 560px;
+    width: 410px;
+  }
+}
