--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,23 @@
   scroll-behavior: smooth;
   /* border: 1px red solid; */
 }
+/* scroll//////////////////////////////////////////////////////// */
+::-webkit-scrollbar {
+  width: 9px;
+  height: 9px;
+}
+::-webkit-scrollbar-track {
+  border-radius: 999px;
+  background-color: rgba(223, 223, 223, 0.267);
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 999px;
+  background-color: rgba(0, 0, 0, 0.363);
+}
+::-webkit-scrollbar-thumb:hover {
+  border-radius: 999px;
+  background-color: rgba(0, 0, 0, 0.26);
+}
 /* Nav/////////////////////////////////////////////////////////////////////////////////////////////////// */
 
 .no-scroll {
